Forge/Fabric launching state achieved